--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Hello, world!</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="" />
+  <link rel="icon" href="img/favicon.png">
+  <meta name="theme-color" content="">
+  <meta property="og:title" content="" />
+  <meta property="og:description" content="" />
+  <meta property="og:image" content="" />
+  <meta name="twitter:card" content="">
+  <meta name="twitter:site" content="">
+  <meta name="twitter:title" content="">
+  <meta name="twitter:description" content="">
+  <meta name="twitter:image" content="">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</head>
+<body>
+  <div id="loader-wrapper">
+  	<div class="loader"></div>
+  </div>
+  <style>
+    /* For best practice, move CSS below to an external CSS file. */
+    @keyframes rotation {
+      0% {
+        transform: rotate(0deg); }
+      100% {
+        transform: rotate(360deg); } }
+    #loader-wrapper {
+      background-color: #FFFFFF;
+      position: fixed;
+      z-index: 999;
+      width: 100%;
+      height: 100%;
+      text-align: center; }
+    .loader {
+      width: 40px;
+      height: 40px;
+      border: 5px solid #000000;
+      border-bottom-color: transparent;
+      border-radius: 50%;
+      margin-top:calc(50vh - 20px);
+      display: inline-block;
+      box-sizing: border-box;
+      -webkit-animation: rotation 1s linear infinite;
+      animation: rotation 1s linear infinite; }
+  </style>
+  <h1>Hello, world!</h1>
+  <script type="text/javascript">
+    $(window).on('load', function() {
+      $("#loader-wrapper").fadeOut(700);
+    });
+  </script>
+</body>
+</html>
