--- a/index.html
+++ b/index.html
@@ -17,8 +17,34 @@
   <meta name="twitter:description" content="">
   <meta name="twitter:image" content="">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
+  <div id="cookie-notice" class="w-100 bg-dark text-white pt-3 px-4 pb-1 position-fixed" style="z-index: 1000; bottom: 0;">
+    <div class="container p-2">
+      <div class="row">
+        <div class="col-sm-8 col-md-9">
+          <p class="p-2">This website uses cookies so that we can provide you with the best website experience. By clicking “I Accept” you acknowledge the use of cookies and to our <a href="#"><u>Privacy Policy</u></a>.</p> 
+        </div>
+        <div class="col-sm-4 col-md-3">
+          <a class="i-accept btn btn-primary m-2">I Accept</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript">
+    (function($){
+      $('.i-accept').on('click', function() {   
+        if(localStorage.noshow !== '1') {
+          $('#cookie-notice').addClass('d-none');
+           localStorage.noshow='1';
+        }  
+      });
+      if(localStorage.noshow == '1') {
+        $('#cookie-notice').addClass('d-none');
+      };
+    })(jQuery);
+  </script>
   <div id="loader-wrapper">
   	<div class="loader"></div>
   </div>
