--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hello, world!</title>
+  <title>Home | Science Journal</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
@@ -99,7 +99,7 @@
             Team
         </a>
         <a class="block lg:inline-block mt-4 lg:mt-0 text-blue-900 hover:text-indigo-600" href="#">
-            Galery
+            Gallery
         </a>
     </div>
     <div class="navbar-menu hidden lg:order-3 lg:block w-full lg:w-2/5 lg:text-right">
