--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <link rel="icon" href="img/favicon.png">
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-  <meta name="theme-color" content="">
+  <meta name="theme-color" content="#000000">
   <meta property="og:title" content="" />
   <meta property="og:description" content="" />
   <meta property="og:image" content="" />
