--- a/Space-Science/starters.html
+++ b/Space-Science/starters.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="icon" href="img/favicon.png">
-  <meta name="theme-color" content="">
+  <meta name="theme-color" content="#000000">
   <meta property="og:title" content="" />
   <meta property="og:description" content="" />
   <meta property="og:image" content="" />
@@ -47,7 +47,16 @@
       -webkit-animation: rotation 1s linear infinite;
       animation: rotation 1s linear infinite; }
   </style>
-  <h1>Hello, world!</h1>
+  <section class="text-gray-600 body-font">
+  <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://images.app.goo.gl/PDHCnjj6q7Psdayj6">
+    Image Source: NASA
+    <div class="text-center lg:w-2/3 w-full">
+      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">M</h1>
+      <p class="mb-8 leading-relaxed">Meggings kinfolk echo park stumptown DIY, kale chips beard jianbing tousled. Chambray dreamcatcher trust fund, kitsch vice godard disrupt ramps hexagon mustache umami snackwave tilde chillwave ugh. Pour-over meditation PBR&amp;B pickled ennui celiac mlkshk freegan photo booth af fingerstache pitchfork.</p>
+    </div>
+  </div>
+</section>
   <div id="cookie-notice" class="w-100 bg-dark text-white pt-3 px-4 pb-1 position-fixed" style="z-index: 1000; bottom: 0;">
     <div class="container p-2">
       <div class="row">
