--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
+  <script>
   $('#msgDiv').load('/nav.html');
+  </script>
   <div id="msgDiv"></div>
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
