--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 </head>
 <body>
   <script>
-  $('#msgDiv').load('/nav.html');
+    $('#nav').load('navbar.html');
+    <div id="nav"></div>
   </script>
-  <div id="msgDiv"></div>
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4">
