--- a/Team/Members.html
+++ b/Team/Members.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Members | Add a name here!</title>
+  <title>Members | Science Journal</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content=""/>
