--- a/Team/Members.html
+++ b/Team/Members.html
@@ -82,7 +82,7 @@
           <div class="flex-grow sm:pl-8">
             <h2 class="title-font font-medium text-lg text-gray-900">Anant Dubey</h2>
             <h3 class="text-gray-500 mb-3">Designer</h3>
-            <p class="mb-4">Nalla aadmi</p>
+            <p class="mb-4">Lorem ipsum dolor sit amet.</p>
             <span class="inline-flex">
               <a class="text-gray-500">
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
