--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
   <script>
     $('#nav').load('navbar.html');
-    <div id="nav"></div>
-  </script>
+  </script>\
+  <div id="nav"></div>
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap -m-4">
