--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <script>
     $('#nav').load('navbar.html');
-  </script>\
+  </script>
   <div id="nav"></div>
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
