--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <script>
-    $('#nav').load('navbar.html');
+    ('#nav').load('navbar.html');
   </script>
   <div id="nav"></div>
 <section class="text-gray-600 body-font">
