--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
       <div class="p-4 md:w-1/3">
         <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
           <div class="flex items-center mb-3">
-            <h2 class="text-white text-lg title-font font-medium">Shooting Stars</h2>
+            <h2 class="text-white text-lg title-font font-medium">Space</h2>
           </div>
           <div class="flex-grow">
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
@@ -52,7 +52,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
       <div class="p-4 md:w-1/3">
         <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
           <div class="flex items-center mb-3">
-            <h2 class="text-white text-lg title-font font-medium">The Catalyzer</h2>
+            <h2 class="text-white text-lg title-font font-medium">Chemistry</h2>
           </div>
           <div class="flex-grow">
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
@@ -67,7 +67,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
       <div class="p-4 md:w-1/3">
         <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
           <div class="flex items-center mb-3">
-            <h2 class="text-white text-lg title-font font-medium">Neptune</h2>
+            <h2 class="text-white text-lg title-font font-medium">Physics</h2>
           </div>
           <div class="flex-grow">
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
@@ -78,6 +78,21 @@ The next-science project, with so much knowledge for amateurs to professionals, 
             </a>
           </div>
         </div>
+        <div class="p-4 md:w-1/3">
+        <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
+          <div class="flex items-center mb-3">
+            <h2 class="text-white text-lg title-font font-medium">Technology</h2>
+          </div>
+          <div class="flex-grow">
+            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
+              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
       </div>
     </div>
   </div>
