--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
               </svg>
             </a>
       </div>
+      </div>
       <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
           <div class="flex items-center mb-3">
             <h2 class="text-white text-lg title-font font-medium">Technology</h2>
