--- a/index.html
+++ b/index.html
@@ -29,17 +29,11 @@ The next-science project, with so much knowledge for amateurs to professionals, 
     </div>
   <section class="text-gray-400 bg-gray-900 body-font">
   <div class="container px-5 py-24 mx-auto flex flex-wrap">
-    <div class="flex flex-col text-center w-full mb-20">
-      <h2 class="text-xs text-indigo-400 tracking-widest font-medium title-font mb-1">WE ♡ SCIENCE.</h2>
-      <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">So we learn it together!</h1>
-    </div>
     <div class="flex flex-wrap -m-4">
-      <div class="p-4 md:w-1/3">
-        <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
-          <div class="flex items-center mb-3">
-            <h2 class="text-white text-lg title-font font-medium">Space</h2>
-          </div>
+      <div class="p-4 lg:w-1/2 md:w-full">
+        <div class="flex border-2 rounded-lg border-gray-800 p-8 sm:flex-row flex-col">
           <div class="flex-grow">
+            <h2 class="text-white text-lg title-font font-medium mb-3">Space</h2>
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
             <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -49,12 +43,10 @@ The next-science project, with so much knowledge for amateurs to professionals, 
           </div>
         </div>
       </div>
-      <div class="p-4 md:w-1/3">
-        <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
-          <div class="flex items-center mb-3">
-            <h2 class="text-white text-lg title-font font-medium">Chemistry</h2>
-          </div>
+      <div class="p-4 lg:w-1/2 md:w-full">
+        <div class="flex border-2 rounded-lg border-gray-800 p-8 sm:flex-row flex-col">
           <div class="flex-grow">
+            <h2 class="text-white text-lg title-font font-medium mb-3">Physics</h2>
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
             <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -64,11 +56,10 @@ The next-science project, with so much knowledge for amateurs to professionals, 
           </div>
         </div>
       </div>
-        <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
-          <div class="flex items-center mb-3">
-            <h2 class="text-white text-lg title-font font-medium">Physics</h2>
-          </div>
+      <div class="p-4 lg:w-1/2 md:w-full">
+        <div class="flex border-2 rounded-lg border-gray-800 p-8 sm:flex-row flex-col">
           <div class="flex-grow">
+            <h2 class="text-white text-lg title-font font-medium mb-3">Technology</h2>
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
             <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -78,11 +69,10 @@ The next-science project, with so much knowledge for amateurs to professionals, 
           </div>
         </div>
       </div>
-  <div class="flex rounded-lg h-full bg-gray-800 bg-opacity-60 p-8 flex-col">
-          <div class="flex items-center mb-3">
-            <h2 class="text-white text-lg title-font font-medium">Technology</h2>
-          </div>
+      <div class="p-4 lg:w-1/2 md:w-full">
+        <div class="flex border-2 rounded-lg border-gray-800 p-8 sm:flex-row flex-col">
           <div class="flex-grow">
+            <h2 class="text-white text-lg title-font font-medium mb-3">Chemistry</h2>
             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
             <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -92,7 +82,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
           </div>
         </div>
       </div>
-     </div>
+    </div>
   </div>
 </section>
 </section>
