--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
       <p class="leading-relaxed mt-4">
 The next-science project, with so much knowledge for amateurs to professionals, we currently focus onto these categories -</p>
     </div>
+    <div class="container px-5 py-24 mx-auto flex flex-wrap">
+    <div class="flex flex-col text-center w-full mb-20">
+      <h2 class="text-xs text-indigo-400 tracking-widest font-medium title-font mb-1">WE ♡ SCIENCE</h2>
+      <h1 class="sm:text-3xl text-2xl font-medium title-font text-white">So we ♡ these.</h1>
+    </div>
+    </div>
   <section class="text-gray-400 bg-gray-900 body-font">
   <div class="container px-5 py-24 mx-auto flex flex-wrap">
     <div class="flex flex-wrap -m-4">
