--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
         <div class="flex border-2 rounded-lg border-gray-800 p-8 sm:flex-row flex-col">
           <div class="flex-grow">
             <h2 class="text-white text-lg title-font font-medium mb-3">Space</h2>
-            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <p class="leading-relaxed text-base">Nothing doesn't exist so, we got something!</p>
             <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -51,7 +51,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
         <div class="flex border-2 rounded-lg border-gray-800 p-8 sm:flex-row flex-col">
           <div class="flex-grow">
             <h2 class="text-white text-lg title-font font-medium mb-3">Physics</h2>
-            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <p class="leading-relaxed text-base">Is physics physically present? Let's find out!</p>
             <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -64,7 +64,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
         <div class="flex border-2 rounded-lg border-gray-800 p-8 sm:flex-row flex-col">
           <div class="flex-grow">
             <h2 class="text-white text-lg title-font font-medium mb-3">Technology</h2>
-            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <p class="leading-relaxed text-base">We have been Tech Savvy since birth! Have you?</p>
             <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -77,7 +77,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
         <div class="flex border-2 rounded-lg border-gray-800 p-8 sm:flex-row flex-col">
           <div class="flex-grow">
             <h2 class="text-white text-lg title-font font-medium mb-3">Chemistry</h2>
-            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+            <p class="leading-relaxed text-base">Chemicals, Our Friends from a mole to a kilogram!</p>
             <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
