--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ The next-science project, with so much knowledge for amateurs to professionals, 
           <div class="flex-grow">
             <h2 class="text-white text-lg title-font font-medium mb-3">Space</h2>
             <p class="leading-relaxed text-base">Nothing doesn't exist so, we got something!</p>
-            <a class="mt-3 text-indigo-400 inline-flex items-center">Learn More
+            <a class="mt-3 text-indigo-400 inline-flex items-center" href="Space-Science/index.html">I exist, allow me to read
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
               </svg>
