--- a/Space-Science/index.html
+++ b/Space-Science/index.html
@@ -21,7 +21,14 @@
 </head>
 <body>
 <div class="relative flex min-h-screen flex-col justify-center overflow-hidden bg-gradient-to-br from-lime-300 to-green-500 p-6 sm:py-12">
-  <h1>Search or Read any articles related to Space...</h1>
+  <section class="text-gray-400 body-font bg-gray-900">
+  <div class="container px-5 py-24 mx-auto">
+    <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
+      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Search any post related to space</h1>
+      <p class="lg:w-1/2 w-full leading-relaxed text-opacity-80">Or read any one of the below...</p>
+    </div>
+  </div>
+  </section>  
   <div class="relative rounded-2xl bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:px-10">
     <div class="mx-auto max-w-md">
       <form action="" class="relative mx-auto w-max">
