--- a/Space-Science/index.html
+++ b/Space-Science/index.html
@@ -20,7 +20,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
-<div class="relative flex min-h-screen flex-col justify-center overflow-hidden bg-gradient-to-br from-lime-300 to-green-500 p-6 sm:py-12">
+<div class="relative flex min-h-screen flex-col justify-center overflow-hidden p-6 sm:py-12">
   <section class="text-gray-400 body-font bg-gray-900">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
