--- a/Space-Science/index.html
+++ b/Space-Science/index.html
@@ -19,7 +19,7 @@
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-gray-900">
 <div class="relative flex min-h-screen flex-col justify-center overflow-hidden p-6 sm:py-12">
   <section class="text-gray-400 body-font bg-gray-900">
   <div class="container px-5 py-24 mx-auto">
