--- a/Space-Science/index.html
+++ b/Space-Science/index.html
@@ -30,7 +30,7 @@
   </div>
   </section>  
   <div class="relative rounded-2xl bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:px-10 bg-gray-900">
-    <div class="mx-auto max-w-md bg-gray-900">
+    <div class="mx-auto max-w-md">
       <form action="" class="relative mx-auto w-max">
         <input type="search" 
               class="peer cursor-pointer relative z-10 h-12 w-12 rounded-full border bg-transparent pl-12 outline-none focus:w-full focus:cursor-text focus:border-lime-300 focus:pl-16 focus:pr-4" />
