--- a/Space-Science/index.html
+++ b/Space-Science/index.html
@@ -24,7 +24,7 @@
   <div class="container px-5 py-24 mx-auto bg-gray-900">
     <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Search any post related to space</h1>
-      <p class="lg:w-1/2 w-full leading-relaxed">Or read any one of the below...</p>
+      <p class="lg:w-1/2 w-full leading-relaxed opacity-100">Or read any one of the below...</p>
     </div>
   </div>
   <div class="relative rounded-2xl bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:max-w-lg sm:px-10 bg-gray-900">
