--- a/Space/index.html
+++ b/Space/index.html
@@ -96,10 +96,10 @@
       </div>
       <div class="p-4 lg:w-1/3">
         <div class="h-full bg-gray-800 bg-opacity-40 px-8 pt-16 pb-24 rounded-lg overflow-hidden text-center relative">
-          <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
-          <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">Selvage Poke Waistcoat Godard</h1>
-          <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
-          <a class="text-indigo-400 inline-flex items-center">Learn More
+          <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">SPACE</h2>
+          <h1 class="title-font sm:text-2xl text-xl font-medium text-white mb-3">Olber's Paradox | Why is the Night Sky Dark?</h1>
+          <p class="leading-relaxed mb-3">Why is the Night Sky Dark instead of Bright while other stars are still present? Here, we deal with the Olber's or The Night Sky Paradox...</p>
+          <a class="text-indigo-400 inline-flex items-center">Read
             <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
               <path d="M5 12h14"></path>
               <path d="M12 5l7 7-7 7"></path>
