--- a/Space/index.html
+++ b/Space/index.html
@@ -23,7 +23,7 @@
 <div class="relative flex min-h-screen flex-col justify-center overflow-hidden p-6 sm:py-12">
   <div class="container px-5 py-24 mx-auto bg-gray-900">
     <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
-      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Search any post related to space <br> Or <br>
+      <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Read latest posts related to space ⤵⬇<br> Or <br>
       <button type="button" class="inline-block px-6 py-2 border-2 border-gray-200 text-gray-200 font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out" href="Space/Search.html">Search Space Posts</button></h1>
     </div>
   </div>
