--- a/Space/index.html
+++ b/Space/index.html
@@ -18,6 +18,22 @@
   <meta name="twitter:image" content="">
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <style>
+    ::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 100vh;
+  background: #1f2937;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(rgb(27, 60, 84), rgb(63, 23, 22), rgb(75, 80, 89), rgb(199, 174, 138), rgb(136, 114, 100));
+}
+  </style>
 </head>
 <body class="bg-gray-900">
 <div class="relative flex min-h-screen flex-col justify-center overflow-hidden p-6 sm:py-12">
