--- a/Space/index.html
+++ b/Space/index.html
@@ -31,7 +31,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(rgb(27, 60, 84), rgb(63, 23, 22), rgb(75, 80, 89), rgb(199, 174, 138), rgb(136, 114, 100));
+  background: linear-gradient(rgb(54, 71, 111), rgb(62, 134, 142), rgb(209, 184, 150), rgb(111, 111, 111);
 }
   </style>
 </head>
