--- a/Space/index.html
+++ b/Space/index.html
@@ -31,7 +31,7 @@
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(rgb(54, 71, 111), rgb(62, 134, 142), rgb(209, 184, 150), rgb(111, 111, 111);
+  background: linear-gradient(rgb(54, 71, 111), rgb(62, 134, 142), rgb(209, 184, 150), rgb(111, 111, 111));
 }
   </style>
 </head>
