--- a/Space/index.html
+++ b/Space/index.html
@@ -32,6 +32,11 @@
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: linear-gradient(rgb(54, 71, 111), rgb(62, 134, 142), rgb(209, 184, 150), rgb(111, 111, 111));
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
 }
   </style>
 </head>
