--- a/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
+++ b/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
@@ -22,6 +22,9 @@
 body {
     background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/pillars_of_creation.jpg');
     background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
 }
 
 bgbgeffect {
