--- a/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
+++ b/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
@@ -20,7 +20,7 @@
   <style>
     /* Background styles */
 body {
-    background-image: url('https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/pillars_of_creation.jpg');
+    background-image: url('https://unsplash.com/photos/Oze6U2m1oYU/download?force=true');
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
