--- a/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
+++ b/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
@@ -25,22 +25,21 @@ body {
 }
 
 bgbgeffect {
-    background: rgba( 255, 255, 255, 0 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 20px );
-    -webkit-backdrop-filter: blur( 20px );
+    background: rgba(255,255,255,0.25);
+    -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px);
+    border: 1px solid rgba(255,255,255,0.125);
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
   </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
-<section class="text-gray-600 body-font">
+<section class="body-font">
   <div class="bgbgeffect container mx-auto flex flex-col px-5 py-24 justify-center items-center">
     <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
     <div class="w-full md:w-2/3 flex flex-col mb-16 items-center text-center">
-      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Olber's Paradox | Why is the Night Sky Dark?</h1>
+      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium">Olber's Paradox | Why is the Night Sky Dark?</h1>
       <p class="mb-8 leading-relaxed">Why is the Night Sky Dark instead of Bright while other stars are still present? Here, we deal with the Olber's or The Night Sky Paradox...</p>
     </div>
   </div>
