--- a/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
+++ b/Space/Olbers-Paradox-Why-is-the-Night-Sky-Dark.html
@@ -67,6 +67,7 @@
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+	<script id="dsq-count-scr" src="//sciencejournal-official.disqus.com/count.js" async></script>
 </div>
 <body>
 </html>
