--- a/Space/my-template-try.html
+++ b/Space/my-template-try.html
@@ -25,35 +25,33 @@
         <div class="text-gray-700 text-base leading-relaxed">
           <p>There is something truly awe-inspiring about the vastness and complexity of the universe, and it's no surprise that so many people are drawn to learning more about it.</p>
         </div>
-        <h3>1. The Endless Mystries</h3>
         <br>
+        <br>
+        <h3><b>1. The Endless Mystries</b></h3>
         <div class="text-gray-700 text-base leading-relaxed">
           <p>There is still so much we don't know about the universe, from the nature of dark matter and dark energy to the possibility of extraterrestrial life. Every new discovery brings us one step closer to understanding the mysteries of the cosmos, and it's exciting to think about what we might learn next.</p>
         </div>
         <br>
         <br>
-        <h3>2. The Breathtaking beauty</h3>
-        <br>
+        <h3><b>2. The Breathtaking beauty</b></h3>
         <div class="text-gray-700 text-base leading-relaxed">
           <p>From the glowing bands of the Milky Way to the swirling clouds of a distant nebula, space is filled with breathtakingly beautiful sights. Astronomy allows us to appreciate the beauty of the universe in a way that we can't when we're stuck on the surface of our own planet.</p>
         </div>
         <br>
         <br>
-        <h3>3. The sense of Wonder & Inspiration</h3>
-        <br>
+        <h3><b>3. The sense of Wonder & Inspiration</b></h3>
         <div class="text-gray-700 text-base leading-relaxed">
           <p>Looking up at the stars on a clear night can be a humbling experience, reminding us of our place in the grand scheme of things. It's easy to feel small and insignificant when faced with the vastness of space, but that can also be incredibly inspiring. The universe is an endless source of inspiration, and it's no wonder that so many artists, writers, and scientists have been inspired by it.</p>
         </div>
         <br>
         <br>
-        <h3>4.The Practical Applications</h3>
-        <br>
+        <h3><b>4.The Practical Applications</b></h3>
         <div class="text-gray-700 text-base leading-relaxed">
           <p>While space exploration is often seen as a luxury, it actually has numerous practical applications. For example, satellite technology is used for everything from GPS navigation to weather forecasting to telecommunications. Astronomy also helps us understand more about our own planet and how it fits into the larger universe.</p>
         </div>
         <br>
         <br>
-        <h3>5. The Potential for Adventure</h3>
+        <h3><b>5. The Potential for Adventure</b></h3>
         <div class="text-gray-700 text-base leading-relaxed">
           <p>Finally, space and astronomy offer the possibility for adventure and exploration. From astronauts venturing into the void of space to scientists probing the secrets of the cosmos, there are endless opportunities for those who are daring enough to take them.</p>
         </div>
