--- a/Space/my-template-try.html
+++ b/Space/my-template-try.html
@@ -7,6 +7,16 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100">
+  <nav class="bg-gray-800 shadow-lg rounded-lg">
+  <div class="container mx-auto px-4 py-6 flex items-center justify-between">
+    <a href="#" class="text-white text-lg font-semibold">Science Journal</a>
+    <div class="flex items-center">
+      <a href="#" class="px-3 py-2 rounded-lg text-white hover:bg-gray-700 mr-4">Home</a>
+      <a href="#" class="px-3 py-2 rounded-lg text-white hover:bg-gray-700 mr-4">About</a>
+      <a href="#" class="px-3 py-2 rounded-lg text-white hover:bg-gray-700 mr-4">Telegram Channel</a>
+    </div>
+  </div>
+  </nav>
   <div class="max-w-4xl mx-auto py-12 px-4">
     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
       <div class="px-6 py-12">
