--- a/index.html
+++ b/index.html
@@ -23,21 +23,24 @@
   <section class="text-gray-400 bg-gray-900 body-font">
   <div class="container px-5 py-24 mx-auto flex flex-wrap items-center">
     <div class="lg:w-3/5 md:w-1/2 md:pr-16 lg:pr-0 pr-0">
-      <div class="relative flex min-h-screen flex-col justify-center overflow-hidden py-6 sm:py-12">
+        
+        <div class="relative flex min-h-screen flex-col justify-center overflow-hidden py-6 sm:py-12">
   <img src="/img/beams.jpg" alt="" class="absolute top-1/2 left-1/2 -z-10 max-w-none -translate-x-1/2 -translate-y-1/2" width="2000" />
   <div class="absolute inset-0 bg-[url(/img/grid.svg)] bg-center [mask-image:linear-gradient(180deg,white,rgba(255,255,255,0))]"></div>
   <div class="sm:max-w-auto relative px-10 pt-24 pb-24 sm:mx-auto sm:rounded-lg sm:px-20">
     <div class="mx-auto">
       <h1 class="flex flex-col gap-2 text-center text-6xl font-black md:flex-row lg:tracking-tight xl:text-9xl">
-        <span class="before:absolute before:-z-10 before:text-black before:content-[attr(data-text)]" data-text="Develop."><span class="animate-gradient-1 bg-gradient-to-r from-indigo-500 to-blue-500 bg-clip-text text-transparent">Read. </span> </span>
+        <span class="before:absolute before:-z-10 before:text-black before:content-[attr(data-text)]" data-text="Find."><span class="animate-gradient-1 bg-gradient-to-r from-indigo-500 to-blue-500 bg-clip-text text-transparent">Find. </span> </span>
 
-        <span class="before:absolute before:-z-10 before:text-black before:content-[attr(data-text)]" data-text="Preview."><span class="animate-gradient-2 bg-gradient-to-r from-red-500 to-orange-500 bg-clip-text text-transparent"> Leaen. </span> </span>
+        <span class="before:absolute before:-z-10 before:text-black before:content-[attr(data-text)]" data-text="Read."><span class="animate-gradient-2 bg-gradient-to-r from-red-500 to-orange-500 bg-clip-text text-transparent"> Read. </span> </span>
 
-        <span class="before:absolute before:-z-10 before:text-black before:content-[attr(data-text)]" data-text="Ship."><span class="animate-gradient-3 bg-gradient-to-r from-fuchsia-600 to-purple-600 bg-clip-text text-transparent">Share.</span> </span>
+        <span class="before:absolute before:-z-10 before:text-black before:content-[attr(data-text)]" data-text="Share."><span class="animate-gradient-3 bg-gradient-to-r from-fuchsia-600 to-purple-600 bg-clip-text text-transparent">Share.</span> </span>
       </h1>
     </div>
   </div>
 </div>
+        
+  <div class="absolute inset-0 bg-[url(/img/grid.svg)] bg-center [mask-image:linear-gradient(180deg,white,rgba(255,255,255,0))]"></div>
       <p class="leading-relaxed mt-4">
 The next-science project, with so much knowledge for amateurs to professionals, we currently focus onto these categories -</p>
     </div>
