--- a/Space/index.html
+++ b/Space/index.html
@@ -42,7 +42,7 @@
 </head>
 <body class="bg-center bg-no-repeat bg-cover bg-fixed" style="background-image: url('https://raw.githubusercontent.com/sudo-Atharva/Science-Journal/72a2c2453c29487a01949b07190a5c03e1b61b6e/images/nasa-Yj1M5riCKk4-unsplash.jpg')">
 <div class="relative flex min-h-screen flex-col justify-center overflow-hidden p-6 sm:py-12">
-  <div class="container px-5 py-24 mx-auto bg-gray-900">
+  <div class="container px-5 py-24 mx-auto bg-opacity-50 backdrop-blur">
     <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
       <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Read latest posts related to space &#8595;<br> Or <br>
       <button type="button" class="inline-block px-6 py-2 border-2 border-gray-200 text-gray-200 font-medium text-xs leading-tight uppercase rounded hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out" href="Space/Search.html">Search Space Posts</button></h1>
