--- a/Physics/index.html
+++ b/Physics/index.html
@@ -40,7 +40,7 @@
 }
   </style>
 </head>
-<body class="bg-center bg-no-repeat bg-cover bg-fixed" style="background-image: url('https://raw.githubusercontent.com/sudo-Atharva/Science-Journal/72a2c2453c29487a01949b07190a5c03e1b61b6e/images/nasa-Yj1M5riCKk4-unsplash.jpg')">
+<body class="bg-center bg-no-repeat bg-cover bg-fixed" style="background-image: url('https://github.com/sudo-Atharva/Science-Journal/blob/main/images/_eee64370-ada8-4539-838f-44944ccdbe55.jpeg?raw=true')">
 <div class="relative flex min-h-screen flex-col justify-center overflow-hidden p-6 sm:py-12">
   <div class="container px-5 py-24 mx-auto bg-opacity-25 backdrop-blur">
     <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
